[workspace]
members = [".", "simple-builder-macro"]

[package]
name = "simple-builder"
version = "0.0.2"
edition = "2021"
authors = ["Brendan Blanchard"]
license = "MIT"
description = "A procedural macro for creating a builder-pattern struct for any struct."
repository = "https://github.com/Brendan-Blanchard/simple-builder"
exclude = [".idea", ".gitignore", ".github"]

[dependencies]
simple-builder-macro = { version = "0.0.2", path = "simple-builder-macro" }
trybuild = "1.0"
