[package]
name = "simple-builder-macro"
version = "0.0.2"
edition = "2021"
license = "MIT"
authors = ["Brendan Blanchard"]
description = "A procedural macro for creating a Builder object for any struct."
repository = "https://github.com/Brendan-Blanchard/simple-builder"
exclude = [".idea", ".gitignore", ".github"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
